Fixed image alignment for locations cards

--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,8 @@ h2 {
   width: 50%;
   display: block;
   height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .link-card-2-content {
@@ -212,6 +214,7 @@ h2 {
   overflow: hidden;
   position: relative;
   line-height: 1.3;
+  vertical-align: middle;
 }
 
 .link-card-2-content p {
@@ -431,7 +434,8 @@ footer {
   }
 
   .link-card-2 img {
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     max-width: 150px;
   }
 
@@ -520,10 +524,6 @@ footer {
   }
 
   .link-card-2 img {
-    position: absolute;
-    top: 10px;
-    transform: translateX(-50%);
-    left: 50%;
     width: 100%;
     max-height: 200px;
     display: block;
@@ -534,7 +534,6 @@ footer {
     position: relative;
     transform: none;
     overflow: hidden;
-    padding-top: 200px;
   }
 
   .link-card-2-content p {
@@ -766,14 +765,18 @@ footer {
     left: 20px;
     transform: none;
     width: 25%;
+    float: left;
+    padding-top: 40px;
+    margin-left: 10px;
   }
 
   .link-card-2-content {
-    width: 75%;
+    width: 70%;
     padding-top: 0;
-    padding-left: 25%;
     height: 260px;
     font-size: 1.2rem;
+    float: left;
+    padding: 20px;
   }
 
   .link-card-2-content h3 {
